--- a/fruits.html
+++ b/fruits.html
@@ -94,8 +94,6 @@
                     <form style="display: flex;">
 
 
-
-
                         <button type="submit" onclick="checkout()" class="btn btn-primary">Checkout</button>
                     </form>
 
@@ -130,7 +128,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Raspberries</h5>
                                     <p class="card-text">R<span class="fruitPrice">25</span> /Kg</p>
-                                    <a onclick="addItem(),incrementCart(),updateTotal()" class="btn btn-primary">Add To
+                                    <a onclick="addItem()" class="btn btn-primary">Add To
                                         Cart</a>
                                 </div>
                             </div>
@@ -152,7 +150,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Lemons</h5>
                                     <p class="card-text">R<span class="fruitPrice">35</span>/Kg</p>
-                                    <a onclick="addItem(),incrementCart(),updateTotal()" class="btn btn-primary">Add To
+                                    <a onclick="addItem()" class="btn btn-primary">Add To
                                         Cart</a>
                                 </div>
                             </div>
@@ -174,7 +172,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Apricots</h5>
                                     <p class="card-text">R<span class="fruitPrice">35</span> /Kg</p>
-                                    <a onclick="addItem(),incrementCart(),updateTotal()" class="btn btn-primary">Add
+                                    <a onclick="addItem()" class="btn btn-primary">Add
                                         To Cart</a>
                                 </div>
                             </div>
@@ -194,7 +192,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Oranges</h5>
                                     <p class="card-text">R<span class="fruitPrice">25</span>/Kg</p>
-                                    <a onclick="addItem(),incrementCart(),updateTotal()" class="btn btn-primary">Add To
+                                    <a onclick="addItem()" class="btn btn-primary">Add To
                                         Cart</a>
                                 </div>
                             </div>
@@ -220,7 +218,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Apples</h5>
                                     <p class="card-text">R<span class="fruitPrice">45</span>/Kg</p>
-                                    <a onclick="addItem(),incrementCart(),updateTotal()" class="btn btn-primary">Add To
+                                    <a onclick="addItem()" class="btn btn-primary">Add To
                                         Cart</a>
                                 </div>
                             </div>
@@ -240,7 +238,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Peaches</h5>
                                     <p class="card-text">R<span class="fruitPrice">35</span>/Kg</p>
-                                    <a onclick="addItem(),incrementCart(),updateTotal()" class="btn btn-primary">Add To
+                                    <a onclick="addItem()" class="btn btn-primary">Add To
                                         Cart</a>
                                 </div>
                             </div>
@@ -262,7 +260,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Litchis</h5>
                                     <p class="card-text">R<span class="fruitPrice">40</span>/Kg</p>
-                                    <a onclick="addItem(),incrementCart(),updateTotal()" class="btn btn-primary">Add To
+                                    <a onclick="addItem()" class="btn btn-primary">Add To
                                         Cart</a>
                                 </div>
                             </div>
@@ -280,7 +278,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Mangoes</h5>
                                     <p class="card-text">R<span class="fruitPrice">15</span>/Kg</p>
-                                    <a onclick="addItem(),incrementCart(),updateTotal()" class="btn btn-primary">Add To
+                                    <a onclick="addItem()" class="btn btn-primary">Add To
                                         Cart</a>
                                 </div>
                             </div>
@@ -307,7 +305,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Watermelons</h5>
                                     <p class="card-text">R<span class="fruitPrice">55</span>/Kg</p>
-                                    <a onclick="addItem(),incrementCart(),updateTotal()" class="btn btn-primary">Add To
+                                    <a onclick="addItem()" class="btn btn-primary">Add To
                                         Cart</a>
                                 </div>
                             </div>
@@ -327,7 +325,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Kiwis</h5>
                                     <p class="card-text">R<span class="fruitPrice">35</span>/Kg</p>
-                                    <a onclick="addItem(),incrementCart(),updateTotal()" class="btn btn-primary">Add To
+                                    <a onclick="addItem()" class="btn btn-primary">Add To
                                         Cart</a>
                                 </div>
                             </div>
@@ -346,7 +344,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Bananas</h5>
                                     <p class="card-text">R<span class="fruitPrice">30</span>/Kg</p>
-                                    <a onclick="addItem(),incrementCart(),updateTotal()" class="btn btn-primary">Add To
+                                    <a onclick="addItem()" class="btn btn-primary">Add To
                                         Cart</a>
                                 </div>
                             </div>
@@ -365,7 +363,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Carrots</h5>
                                     <p class="card-text">R<span class="fruitPrice">25</span>/Kg</p>
-                                    <a onclick="addItem(),incrementCart(),updateTotal()" class="btn btn-primary">Add To
+                                    <a onclick="addItem()" class="btn btn-primary">Add To
                                         Cart</a>
                                 </div>
                             </div>
@@ -376,9 +374,10 @@
                 </div>
 
             </section>
-            <script src="main.js"></script>
             <script src="https://code.jquery.com/jquery-3.4.1.js"
                 integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+            <script src="main.js"></script>
+
 
 
     </header>
